- BUG: TortoiseSVN wasn't working on Win98-based
       systems anymore 'cause we now use UNICODE.
       So changed the code to compile for either
       MBCS _or_ UNICODE. This means we have
       to provide two binary versions of TSVN 
       from now on (Stefan)
- CHG: The menu items now are properly aligned
       for both with and without icons (Stefan)

Version 0.9.1
- BUG: the zlib dll lead to some crashes, so
       I went back to statically linked zlib (Stefan)
- BUG: The prompt dialog for log messages wasn't
       resized properly. (Stefan)
- BUG: The check for temp files was case aware (Stefan)
       
Version 0.9 (Subversion 0.21, rev 5631)
- BUG: in some dialog the repository browser button
       was disabled (Stefan)
- BUG: the "show log" menu was shown even if there
       were multiple files selected (Stefan)
- BUG: icon overlays weren't shown correctly if only
       the properties changed (Stefan)
- BUG: revision numbers weren't correct for HEAD (Stefan)
- BUG: workaround for strange apr behaviour when 
       opening a file with WRITE|CREATE (Stefan)
- BUG: import dialog ignored the "use foldername
       as modulename" checkbox (Stefan)
- BUG: repository browser now works for https URLs (Stefan)
- BUG: import and commit log messages were limited
       in number of lines (Stefan)
- BUG: files matching the temporary extensions were
       not added even if the user explicitely selected
       them for adding. (Stefan)
- BUG: The folder icon overlay dissapeared if the
       svn:ignored property was set and an ignored
       file was in the folder (Stefan)
- ADD: in the commit dialog (logprompt) there's now
       a label showing to where the commit goes so
       the user can see if (s)he committing to
       a branch or trunk (or worse: to a tag) (Stefan)
- ADD: in the "show log" dialog its now possible to
       select two revisions and the context menu then
       allows to compare those two revisions (Stefan)