@@ -46,7 +46,6 @@ Global
 		{E873DD32-5A31-4DE1-8341-A56A2A5489EA}.Release_MBCS.ActiveCfg = Release_MBCS|Win32
 		{E873DD32-5A31-4DE1-8341-A56A2A5489EA}.Release_MBCS.Build.0 = Release_MBCS|Win32
 		{0A61C9C2-F1D5-475A-90AD-220B85817676}.Debug.ActiveCfg = Release_MBCS
-		{0A61C9C2-F1D5-475A-90AD-220B85817676}.Debug.Build.0 = Release_MBCS
 		{0A61C9C2-F1D5-475A-90AD-220B85817676}.Release.ActiveCfg = Release
 		{0A61C9C2-F1D5-475A-90AD-220B85817676}.Release_MBCS.ActiveCfg = Release_MBCS
 		{50797F06-39C5-4802-8E2B-7B7A4EF03214}.Debug.ActiveCfg = Debug|Win32
